--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,21 @@
      font-size: 16px; 
      line-height: 28px; 
      font-weight: 400;
+ } 
+  
+ .container{ 
+     max-width:1200px; 
+     padding:0 15px; 
+     margin:0 auto;
+     border:1px solid transparent;    
+ } 
+ .container-content{  
+    max-width:970px;  
+    margin: 0 auto;
+ } 
+  
+ .section-line{ 
+    border-bottom: 1px solid rgba(208, 212, 216, .5);
  }
 
  .header__top {
@@ -96,4 +111,51 @@
  .menu__list-link:hover {
      color: #4E5665;
      border-bottom: 4px solid #ECB84C;
+ }  
+
+ .reasons{ 
+     padding: 80px 0 0;
+ }  
+  
+ .reason__title{ 
+    font-family: 'Georgia';
+    font-size: 32px;
+    line-height: 38px;
+    text-align: center;  
+    color: #4E5665; 
+    margin-bottom: 22px;
  }
+   
+ .reason__link{ 
+     text-align:right;
+ } 
+  
+ .reason__link a{  
+     font-weight: 700; 
+     color: #ECB84C; 
+     margin-bottom: 36px;
+ }
+ 
+ .reason__statistics{ 
+   display: flex;   
+   justify-content: space-around; 
+   align-items: center; 
+   text-align: center; 
+   padding-bottom: 80px;
+ } 
+  
+ .reason__statistics-num{  
+    color:#4E5665; 
+    margin-top:32px; 
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 30px;
+ } 
+  
+ .reason__statistics-text{  
+    color:#909090;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+ } 
+  
