--- a/css/style.css
+++ b/css/style.css
@@ -157,5 +157,12 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 17px;
- } 
+ }  
   
+.about{ 
+    padding: 80px 0 0;
+}
+ 
+.about__title{ 
+    
+}
