--- a/css/style.css
+++ b/css/style.css
@@ -11,36 +11,36 @@
  }
 
  body {
-     color: #505050; 
+     color: #505050;
      font-family: 'Lato', sans-serif;
-     /* font-family: 'Noto Sans Georgian', sans-serif; */ 
-     font-size: 16px; 
-     line-height: 28px; 
+     /* font-family: 'Noto Sans Georgian', sans-serif; */
+     font-size: 16px;
+     line-height: 28px;
      font-weight: 400;
- } 
-  
- .container{ 
-     max-width:1200px; 
-     padding:0 15px; 
-     margin:0 auto;
-     border:1px solid transparent;    
- } 
- .container-content{  
-    max-width:970px;  
-    margin: 0 auto;
- } 
-  
- .section-line{ 
-    border-bottom: 1px solid rgba(208, 212, 216, .5);
- } 
+ }
 
- .title{ 
+ .container{
+     max-width:1200px;
+     padding:0 15px;
+     margin:0 auto;
+     border:1px solid transparent;
+ }
+ .container-content{
+    max-width:970px;
+    margin: 0 auto;
+ }
+
+ .section-line{
+    border-bottom: 1px solid rgba(208, 212, 216, .5);
+ }
+
+ .title{
     font-family: 'Georgia';
     font-size: 32px;
     line-height: 38px;
-    text-align: center;  
-    color: #4E5665; 
- }  
+    text-align: center;
+    color: #4E5665;
+ }
 
  .header__top {
      /* background-image: url('../images/top-bg.jpg'); */
@@ -57,7 +57,7 @@
      display: flex;
      flex-direction: column;
      height: 100%;
-     color: #fff; 
+     color: #fff;
      font-family: 'Georgia';
  }
 
@@ -66,7 +66,7 @@
      font-size: 200px;
      line-height: 227px;
      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-     margin: auto; 
+     margin: auto;
      font-weight: 700;
  }
 
@@ -111,117 +111,167 @@
      line-height: 19px;
      padding: 24px 10px 20px;
      color: #909090;
-     margin: 0 6px; 
-     border-bottom: 4px solid transparent; 
+     margin: 0 6px;
+     border-bottom: 4px solid transparent;
      transition:all .5s;
  }
 
  .menu__list-link:hover {
      color: #4E5665;
      border-bottom: 4px solid #ECB84C;
- }  
+ }
 
- .reasons{ 
+ .reasons{
      padding: 80px 0 0;
- }  
-  
- .reason__title{ 
+ }
+
+ .reason__title{
      margin-bottom:22px;
  }
-   
- .reason__link{ 
+
+ .reason__link{
      text-align:right;
- } 
-  
- .reason__link a{  
-     font-weight: 700; 
-     color: #ECB84C; 
+ }
+
+ .reason__link a{
+     font-weight: 700;
+     color: #ECB84C;
      margin-bottom: 36px;
  }
- 
- .reason__statistics{ 
-   display: flex;   
-   justify-content: space-around; 
-   align-items: center; 
-   text-align: center; 
+
+ .reason__statistics{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   text-align: center;
    padding-bottom: 80px;
- } 
-  
- .reason__statistics-num{  
-    color:#4E5665; 
-    margin-top:32px; 
+ }
+
+ .reason__statistics-num{
+    color:#4E5665;
+    margin-top:32px;
     font-weight: 700;
     font-size: 22px;
     line-height: 30px;
- } 
-  
- .reason__statistics-text{  
+ }
+
+ .reason__statistics-text{
     color:#909090;
     font-weight: 700;
     font-size: 14px;
     line-height: 17px;
- }  
-  
-.about{ 
+ }
+
+.about{
     padding: 80px 0 0;
 }
- 
-.about__title{  
+
+.about__title{
     margin-bottom: 13px;
 }
- 
-.about__text{ 
+
+.about__text{
     margin-bottom: 72px;
-} 
- 
-.about__item{ 
-    margin-bottom: 100px; 
-    padding:70px 0; 
-    background-repeat: no-repeat; 
+}
+
+.about__item{
+    margin-bottom: 100px;
+    padding:70px 0;
+    background-repeat: no-repeat;
     background-position:right;
-} 
- 
-.about__box{ 
-    padding: 33px 40px 18px 40px; 
-    background-color:#fff; 
-    max-width:470px; 
+}
+
+.about__box{
+    padding: 33px 40px 18px 40px;
+    background-color:#fff;
+    max-width:470px;
     position:relative;
-}   
- 
-.about__box::after, 
-.about__box::before{ 
-   content: ""; 
-   position:absolute; 
-   width: 33px; 
+}
+
+.about__box::after,
+.about__box::before{
+   content: "";
+   position:absolute;
+   width: 33px;
    height: 33px;
-} 
+}
 
-.about__box::before{ 
-  background-image: url('../images/dekor-left.svg');  
-  top:19px; 
+.about__box::before{
+  background-image: url('../images/dekor-left.svg');
+  top:19px;
   left:19px;
-} 
- 
-.about__box::after{  
-    background-image: url('../images/dekor-right.svg');  
-    bottom:19px; 
-    right:19px;
-} 
+}
 
-.about__box-title{   
+.about__box::after{
+    background-image: url('../images/dekor-right.svg');
+    bottom:19px;
+    right:19px;
+}
+
+.about__box-title{
     font-family: 'Georgia';
     font-size: 24px;
-    line-height: 25px;   
-    color:#4E5665; 
-    margin-bottom: 20px; 
-}  
- 
-.about__item:nth-child(even){ 
+    line-height: 25px;
+    color:#4E5665;
+    margin-bottom: 20px;
+}
+
+.about__item:nth-child(even){
     background-position: left;
-} 
- 
-.about__item:nth-child(even) .about__box{  
+}
+
+.about__item:nth-child(even) .about__box{
   margin-left:auto;
 }
- 
 
+.photo{
+    padding:80px 0;
+}
+
+.photo__title{
+    margin-bottom:42px;
+}
+
+.photo__text{
+   padding-bottom: 48px;
+   margin-bottom: 56px;
+   position:relative;
+}
+
+.photo__text::after{
+    content: "";
+    position:absolute;
+    width: 270px;
+    height: 1px;
+    background-color:rgba(208, 212, 216, .5);
+    bottom:0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.photo__slider{
+    max-width:640px;
+    margin:0 auto;
+}
+
+.slick-arrow{
+    border:none;
+    border-radius:50%;
+    width: 40px;
+    height: 40px;
+    background-color:#ECB84C;
+    cursor:pointer;
+    position:absolute;
+    top:50%;
+    transform: translateY(-50%);
+    z-index: 5; 
+}
+
+.slick-prev{
+    left:-20px;
+}
+
+.slick-next{
+    right:-20px;
+}
