--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
      height: 100vh;
      background-repeat: no-repeat;
      background-size: cover;
-     /* background-position: center; */
+     background-position: center; 
      padding: 40px;
  }
 
@@ -442,4 +442,75 @@
     font-size: 14px;
     line-height: 19px;
     text-align: center;
-}  
+}   
+ 
+.menu__btn{ 
+    display:none;
+}
+ 
+@media(max-width: 700px){ 
+    .header__title{ 
+        font-size: 120px;
+        line-height: 150px;
+    } 
+     
+    .header__text{ 
+        font-size: 20px;
+    }  
+    .menu{ 
+        position:relative;
+    }
+    .menu__btn{ 
+        display:block; 
+        width:40px; 
+        cursor:pointer; 
+        position:absolute; 
+        right: 40px; 
+        top: 10px;
+    }  
+    .menu__btn span{ 
+       display: block; 
+       margin-bottom: 10px; 
+       background-color:#FFD600; 
+       height: 4px;
+    }
+    .menu__list{ 
+        display:none;  
+        padding-top:60px; 
+        text-align:center; 
+        border-bottom:4px solid #ECB84C; 
+        transform: all 0s;
+    } 
+    .menu__list-link{ 
+        display:block; 
+        border-top:4px solid #ECB84C;
+    } 
+     
+    .menu__list-link:hover {
+        border-bottom:4px solid transparent;
+    }
+} 
+ 
+@media(max-width: 540px){  
+    .header__text{ 
+        display:none;
+    }  
+
+    .header__top-inner{ 
+       border: 2px solid #ECB84C;
+    }  
+
+    .header__top{ 
+        padding:10px;
+    }  
+
+    .header__title{ 
+        font-size: 100px; 
+    }
+} 
+ 
+@media(min-width: 700px){  
+    .menu__list{ 
+        display:flex ;  
+    } 
+}
