--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,22 @@
 
     .header__title{ 
         font-size: 100px; 
-    }
+    } 
+     
+    .title{ 
+        font-size: 24px;  
+        line-height: 28px;
+    } 
+   body{  
+       font-size: 15px; 
+       line-height: 24px;
+   }  
+   .reason__statistics{ 
+       display: block;
+   }
+   .reason__statistics-item{ 
+     margin-bottom: 35px;
+   }
 } 
  
 @media(min-width: 700px){  
