--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,10 @@
     .about__dot--4{ 
         right: 200px;
         bottom: 28px;  
+    } 
+    .footer__item--company{ 
+        width:140px; 
+        padding-left: 0;
     }
 }
  
@@ -504,7 +508,14 @@
     } 
     .slick-prev{ 
        left: 10px;
-    }   
+    }    
+    .footer__items{ 
+        flex-wrap: wrap;
+    }  
+
+    .footer__item{ 
+        width:50%;
+    }
 }
  
 @media(max-width: 700px){ 
